--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+apply plugin: "application"
+apply plugin: 'java'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -7,7 +9,7 @@ version '1.0-SNAPSHOT'
 buildscript {
     repositories {
         maven { url "https://repo1.maven.org/maven2" }
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.+'
@@ -15,10 +17,8 @@ buildscript {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
-
-apply plugin: 'java'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
@@ -27,8 +27,19 @@ tasks.register('execute', JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
 }
 
-dependencies {
+jar {
+    mainClassName = 'org.example.Main'
+    manifest {
+        attributes 'Main-Class': 'org.example.Main'
+    }
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+}
 
+dependencies {
     // библиотека для работы с CSV
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.10.0'
 
@@ -36,13 +47,8 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
 
     // библиотека для тестирования
-//    testImplementation 'junit:junit:4.13.2'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.2'
-    testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.9.2'
-
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.11.0'
-
 }
 
 test {
